package org.theMain.enums;

public enum Difficulty {
    EASY,
    MEDIUM,
    HARD,
    INSANE
}
