package org.theMain.enums;

public enum Duration {
    SHORT_TERM,
    MID_TERM,
    LONG_TERM
}
