package org.theMain.enums;

public enum Frequency {
    NONE,
    DAILY,
    WEEKLY,
    MONTHLY
}
